--- a/server/overlay/connection.css
+++ b/server/overlay/connection.css
@@ -1,4 +1,5 @@
 #widget {
+  transform-origin: center center;
   display: flex;
   align-items: center;
   gap: 10px;
